--- a/main.tex
+++ b/main.tex
@@ -108,8 +108,8 @@
 
 % Word counts - Don't count these!
 %TC:ignore
-%\section{Word counts}
-%\detailtexcount{main}
+\section{Word counts}
+\detailtexcount{main}
 %TC:endignore
 
 
