--- a/references.bib
+++ b/references.bib
@@ -703,3 +703,27 @@ Publisher: JMIR Publications Inc., Toronto, Canada},
 	pages = {e8775},
 	file = {Full Text:/home/michael/Zotero/storage/IUSL7B8D/Greenhalgh et al. - 2017 - Beyond Adoption A New Framework for Theorizing an.pdf:application/pdf},
 }
+
+@article{mcmeekin_lifetime_2024,
+	title = {A lifetime economic model of mortality and secondary care use for patients discharged from hospital following acute stroke.},
+        journal = {International Stroke Journal},
+	year = {In press},
+	author = {McMeekin, Peter and McCarthy, Stephen and McCarthy, Andrew and Porteous1, Porteus and Allen, Michael and Laws, Anna and White, Phil and James, Martin and Ford, Gary A. and Shaw, Lisa and Price, Christopher},
+	year = {2024},
+}
+
+@article{allen_estimation_2020,
+	title = {Estimation of stroke outcomes based on time to thrombolysis and thrombectomy},
+	copyright = {© 2020, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
+	url = {https://www.medrxiv.org/content/10.1101/2020.07.18.20156653v1},
+	doi = {10.1101/2020.07.18.20156653},
+	abstract = {{\textless}p{\textgreater}Background \&amp; Motivation: Stroke outcomes following revascularization therapy (intravenous thrombolysis, IVT, and/or mechanical thrombectomy, MT) depend critically on time from stroke onset to treatment. Different service configurations may prioritise time to IVT or time to MT. In order to evaluate alternative acute stroke care configurations, it is necessary to estimate clinical outcomes given differing times to IVT and MT. Method: Model using an algorithm coded in Python. This is available at https://github.com/MichaelAllen1966/stroke\_outcome\_algorithm Results: We demonstrate how the code may be used to estimate clinical outcomes given varying times to IVT and MT. Conclusion: Python code has been developed and shared to enable estimation of clinical outcome given times to IVT and MT. Here we share pseudocode and links to full Python code.{\textless}/p{\textgreater}},
+	language = {en},
+	urldate = {2020-12-17},
+	journal = {medRxiv},
+	author = {Allen, Michael and Pearn, Kerry and Stein, Ken and James, Martin},
+	month = jul,
+	year = {2020},
+	pages = {2020.07.18.20156653},
+	file = {Full Text PDF:/home/michael/Zotero/storage/UIMDZ4XA/Allen et al. - 2020 - Estimation of stroke outcomes based on time to thr.pdf:application/pdf},
+}
