Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -72,6 +72,7 @@
 \tableofcontents
 
 \newpage
+\include{sections/02_abstract}
 \include{sections/03_intro}
 \include{sections/04_study_pathway}
 \include{sections/06_data}
@@ -108,8 +109,8 @@
 
 % Word counts - Don't count these!
 %TC:ignore
-\section{Word counts}
-\detailtexcount{main}
+%\section{Word counts}
+%\detailtexcount{main}
 %TC:endignore
 
 
