--- a/sections/01_title.tex
+++ b/sections/01_title.tex
@@ -17,12 +17,9 @@
 \author[1]{Richard Everson}
 \author[1,5]{Martin James}
 
-
-\author[1,2]{Martin James}
-
 % Check affiliations - update RDE Name
 \affil[1]{\footnotesize University of Exeter Medical School}
-\affil[2]{\footnotesize NIHR South West Peninsula Applied Research Collaboration (ARC).}
+\affil[2]{\footnotesize NIHR South West Peninsula Applied Research Collaboration (ARC)}
 \affil[3]{\footnotesize Northumbria University}
 \affil[4]{\footnotesize University of Oxford}
 \affil[5]{\footnotesize Royal Devon University Healthcare NHS Foundation Trust}
