--- a/sections/03_intro.tex
+++ b/sections/03_intro.tex
@@ -36,7 +36,7 @@ Specific objectives for the current study were:
 
     \item \textbf{Perform patient clustering or sub-setting of patients} to illustrate similarity/differences in thrombolysis decision-making between hospitals.
 
-    \item \textbf{Investigate how well organisation factors (from the SSNAP organisational audit) predict thrombolysis use.}
+    \item \textbf{Investigate how well organisation factors (from the SSNAP organisational audit) predict thrombolysis use}, to identify whether aspects of the organisation impacts the decision to treat.
 
     \item \textbf{Generation of a web-based dashboard} to allow clinicians to interrogate modelling.
 
