--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -102,6 +102,8 @@ Figure \ref{fig:hospital_shap} shows the distribution of SHAP values for hospita
 
 Overall we found 36\% of the variance in observed between-hospital thrombolysis use can be explained by the patient population characteristics (age, stroke severity, prior disability, onset-to-arrival time, stroke type, type of onset time, anticoagulants, and onset during sleep), 74\% can be explained by hospital identity and processes (arrival-to-scan time, and hospital attended), and that 95\% can be explained by the combined information from both the patient population and hospital identity and processes.
 
+We compared expected thrombolysis use in subgroups of patients. This is not included in this synopsis, as it is more clearly demonstrated in the \textit{prototype patients} analysis in section \ref{sec:paper_5}. In summary we found all stroke teams were very likely to give thrombolysis to \textit{ideal candidates} for thrombolysis, but they varied in their likelihood to give thrombolysis to patients with non-ideal characteristics such as mild stroke, imprecisely known onset time, or patients with pre-stroke disability. 
+
 \subsection{Conclusions}
 
 Using explainable machine learning, we have identified how patient features and hospital attended influence decisions to treat with thrombolysis. We showed that the majority of the between-hospital variation in thrombolysis use in England and Wales, for patients arriving with time to thrombolyse, may be explained by differences in in-hospital processes and differences in attitudes to judging suitability for thrombolysis.
