--- a/sections/20_other_outputs.tex
+++ b/sections/20_other_outputs.tex
@@ -21,3 +21,16 @@ Data and code for this is available at: url{https://github.com/samuel-book/strok
 \subsection{Predicting willingness to use thrombolysis from SSNAP organisational audit data}
 
 We performed a model to investigate whether organisational audit results reported by SSNAP could be used to predict a teams willingness to use thrombolysis (as measured by the SHAP value for the stroke team in the thrombolysis decision model). We were not able to predict willingness to use thrombolysis from these data (see \url{https://github.com/samuel-book/thrombolysis_organisational_factors/blob/main/data_prep/2c_statsmodels.ipynb}).
+
+\subsection{Conference presentations}
+
+Work described here has been presented at the following conferences (presentations may be downloaded from the links provided):
+
+Pearn, K., Allen, M., Laws, A., Everson, R. & James, M. (2023). What would other emergency stroke teams do? Using explainable machine learning to understand variation in thrombolysis practice. European Stroke Organisation Conference. Zenodo. https://doi.org/10.5281/zenodo.7878306
+
+Pearn, K., Allen, M., Laws, A., Everson, R. & James, M. (2023). WHAT WOULD OTHER EMERGENCY STROKE TEAMS DO? Using explainable machine learning to understand variation in thrombolysis (clot-busting) practice. AI UK 2023 (Turing Institute), London, UK. Zenodo. https://doi.org/10.5281/zenodo.7759059
+
+Pearn, K., Allen, M., Laws, A., & James, M. (2024). VARIATION IN THROMBOLYSIS USE AND THE POTENTIAL EFFECT ON OUTCOMES IN ENGLAND AND WALES: AN OBSERVATIONAL MACHINE LEARNING STUDY. European Stroke Organisation Conference (ESOC). Zenodo. https://doi.org/10.5281/zenodo.11191491
+
+Laws, A., Allen, M., Pearn, K., & James, M. (2024). MODELLING DISABILITY-LEVEL AND UTILITY OUTCOMES DEPENDING ON TIME TO THROMBOLYSIS AND MECHANICAL THROMBECTOMY. European Stroke Organisation Conference (ESOC). Zenodo. https://doi.org/10.5281/zenodo.11191633
+
