--- a/sections/21_discussion.tex
+++ b/sections/21_discussion.tex
@@ -1,9 +1,5 @@
 \section{Discussion}
 
-\subsection{Achievement of project aims}
+\subsection{Principle findings}
 
 \subsection{Clinical discussion}
-
-\subsection{Limitations}
-
-\subsection{Further work}
