--- a/sections/04_study_pathway.tex
+++ b/sections/04_study_pathway.tex
@@ -1,12 +1,5 @@
 \section{Emergency stroke pathway under study}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=1.0\linewidth]{images/flow}
-    \caption{An overview of the process steps included in the modelling.}
-    \label{fig:flow}
-\end{figure}
-
 This project focused on use of thrombolysis and outcomes (with and without thrombolysis) at discharge from in-patient care. Figure \ref{fig:flow} shows an overview of the process steps included in the modelling. All modelling data came from the national stroke registry for England, Wales and Northern Ireland, the Sentinel Stroke National Audit Programme (SSNAP).
 
 \begin{itemize}
@@ -21,11 +14,17 @@ This project focused on use of thrombolysis and outcomes (with and without throm
 
     \item \textit{Decision to treat}: We model each stroke teams patterns of who they decide to treat with thrombolysis.
 
-    \item \textit{Thrombolysis}: SSNAP records whether thrombolysis was given and the time of thrombolysis.
+    \item \textit{Thrombolysis (IVT)}: SSNAP records whether thrombolysis was given and the time of thrombolysis.
 
     \item \textit{Disability at discharge}: SSNAP records modified Rankin Scale (mRS) at discharge from inpatient care. For about third of patients there is a follow-up measure at 6 months. In our modelling we use disability at discharge as (1) data is essentially complete, and (2) this is the outcome most closely tied with the effect of thrombolysis, which is our focus of study in the described project.
 
 \end{itemize}
 
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=1.0\linewidth]{images/flow}
+    \caption{An overview of the process steps included in the modelling.}
+    \label{fig:flow}
+\end{figure}
 
 Process flow was modelled by sampling from distributions of historic flow for each stroke team. Decision-making (choice of thrombolysis) was modelled with machine learning, learning which patients would likely be given thrombolysis at each stroke team. Outcomes were predicted using either mathematical models based on clinical trials (for the full pathway model), or clinical outcome machine learning models (for the more detailed analysis of differences in thrombolysis decision-making between teams).
